# shooter2d

./: .gitignore  Beach_Tile.tsx  CMakeLists.txt  Cliff_Tile.tsx  Justfile  README.md  game.hh  libgfx  main.cc  map.hh  map.tmx  player.hh  projectiles.hh  world.hh
.cache/clangd/index/: main.cc.B61B0C038DBC9D0D.idx
assets/: Beach_Tile.tsx  Cliff_Tile.tsx  map.tmx
